--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-wrapper {
     margin: 0 auto;
-    display: grid;
     width: 1200px;
+    display: grid;
     grid-template-areas: "h h" "n c";
     color: white;
     grid-template-rows: 60px 1fr;
@@ -12,6 +12,9 @@
 .app-wrapper-content {
     grid-area: c;
     background-color: #1a1a1e;
+    border-top: 7px solid #2f2f3594;
+    border-left: 7px solid #23232794;
+    padding: 0px 35px;
 }
 
 /* #121214 */
